--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,28 @@
+.modal-bg {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    width: 300px;
+    height: 100px;
+    background-color: white;
+    border-radius: 4px;
+    text-align: center;
+    padding: 20px;
+}
+
+#roomButton {
+    display: block;
+    margin: 20px auto;
+}
+
 .row:after {
     clear: both;
     content: "";
@@ -22,3 +47,4 @@
 #status{
     font-weight: bold; 
 }
+
