--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,13 @@
+body {
+    text-align: center;
+    background-color: rgb(174, 235, 188)
+}
+
+#board {
+    margin: 0 auto;
+    width: 100px;
+}
+
 .modal-bg {
     width: 100%;
     height: 100%;
